--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.8.0",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-firestore": "^0.12.0"
