--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.12.0"
+    "redux-firestore": "^0.12.0",
+    "stream-chat": "^2.5.0",
+    "stream-chat-react": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
