--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-firestore": "^0.12.0",
+    "semantic-ui-react": "^2.0.3",
     "stream-chat": "^2.5.0",
     "stream-chat-react": "^3.0.1"
   },
