--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.12.0",
     "semantic-ui-react": "^2.0.3",
